- use valueOf() methods for primitive wrapper types - remove some unused classes (SettableXXX and tests)
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@12520 7fc7bbf3-cf45-46d4-be06-341739edd864